Prevent DNS rebinding

--- a/roles/dns_adblocking/templates/dnsmasq.conf.j2
+++ b/roles/dns_adblocking/templates/dnsmasq.conf.j2
@@ -94,6 +94,7 @@ server={{ local_service_ip }}#5353
 {% for host in dns_servers.ipv4 %}
 server={{ host }}
 {% endfor %}
+stop-dns-rebind
 {% endif %}
 
 # and this sets the source (ie local) address used to talk to
