--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -154,6 +154,8 @@
             <integer>1</integer>
         </dict>
         <dict>
+            <key>Password</key>
+            <string>{{ easyrsa_p12_export_password }}</string>
             <key>PayloadCertificateFileName</key>
             <string>ca.crt</string>
             <key>PayloadContent</key>
