--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -155,7 +155,7 @@
         </dict>
         <dict>
             <key>Password</key>
-            <string>{{ easyrsa_p12_export_password }}</string>
+            <string>{{ p12_export_password }}</string>
             <key>PayloadCertificateFileName</key>
             <string>ca.crt</string>
             <key>PayloadContent</key>
