--- a/roles/dns_adblocking/templates/dnsmasq.conf.j2
+++ b/roles/dns_adblocking/templates/dnsmasq.conf.j2
@@ -91,7 +91,7 @@ no-resolv
 {% if dns_encryption %}
 server={{ local_service_ip }}#5353
 {% if ipv6_support -%}
-server=FCAA::1#5353
+server={{ local_service_ipv6 }}#5353
 {% endif %}
 {% else %}
 {% for host in dns_servers.ipv4 %}
