--- a/roles/common/templates/10-algo-lo100.network.j2
+++ b/roles/common/templates/10-algo-lo100.network.j2
@@ -4,4 +4,6 @@ Name=lo
 [Network]
 Description=lo:100
 Address={{ local_service_ip }}/32
+{% if ipv6_support | default(false) %}
 Address={{ local_service_ipv6 }}/128
+{% endif %}
