--- a/roles/common/templates/rules.v6.j2
+++ b/roles/common/templates/rules.v6.j2
@@ -76,8 +76,10 @@ COMMIT
 -A INPUT -m ah -j ACCEPT
 # rate limit ICMP traffic per source
 -A INPUT -p icmpv6 --icmpv6-type echo-request -m hashlimit --hashlimit-upto 5/s --hashlimit-mode srcip --hashlimit-srcmask 32 --hashlimit-name icmp-echo-drop -j ACCEPT
-# Accept IPSEC/WireGuard traffic to ports {{ subnets | join(',') }}
+{% if ports %}
+# Accept IPSEC/WireGuard traffic to ports {{ ports | join(',') }}
 -A INPUT -p udp -m multiport --dports {{ ports | join(',') }} -j ACCEPT
+{% endif %}
 {% if xray_enabled | default(false) %}
 # Accept VLESS/Reality traffic (stealth VPN)
 -A INPUT -p tcp --dport {{ xray_port }} -m conntrack --ctstate NEW -j ACCEPT
@@ -99,6 +101,7 @@ COMMIT
 # DUMMY interfaces are the proper way to install IPs without assigning them any
 # particular virtual (tun,tap,...) or physical (ethernet) interface.
 
+{% if subnets %}
 # Accept DNS traffic to the local DNS resolver from VPN clients only
 -A INPUT -s {{ subnets | join(',') }} -d {{ local_service_ipv6 }}/128 -p udp --dport 53 -j ACCEPT
 
@@ -106,6 +109,7 @@ COMMIT
 -A FORWARD -s {{ subnets | join(',') }} -d {{ subnets | join(',') }} -j {{ "DROP" if BetweenClients_DROP else "ACCEPT" }}
 # Drop traffic to VPN clients from SSH tunnels
 -A OUTPUT -d {{ subnets | join(',') }} -m owner --gid-owner 15000 -j {{ "DROP" if BetweenClients_DROP else "ACCEPT" }}
+{% endif %}
 
 -A FORWARD -j ICMPV6-CHECK
 -A FORWARD -p tcp --dport 445 -j {{ "DROP" if block_smb else "ACCEPT" }}
